# ubrato-store

./: .env.exmaple  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  flake.nix  pyproject.toml
app/: config.py  exceptions.py  main.py
app/routers/: dependencies.py  s3.py
app/schemas/: file_stats.py  jwt_user.py
app/services/: exceptions.py  jwt.py  s3.py
scripts/: run.sh
